Fix: bottom menu buttons have different widths on small screens

--- a/src/scss/partials/_bottom-menu.scss
+++ b/src/scss/partials/_bottom-menu.scss
@@ -14,6 +14,7 @@ aside
         color: rgba($secondary-color, 0.5);
         border: none;
         border-radius: 0;
+        overflow: auto;
 
         span
         {
